--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.8",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -27,6 +27,7 @@
     "jquery": "^3.3.1",
     "jquery-bracket": "^0.11.1",
     "moment": "^2.21.0",
+    "ng-pick-datetime": "^5.1.8",
     "open-iconic": "^1.1.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
